src/app/modules/party/page/party.component.scss
@import '../../../../styles/variables.scss';

.party {
  height: 100%;
  grid-column: center-start / center-end;

  &__act {
    display: flex;
    flex-direction: column;

    &__actions {
      align-self: center;
    }

    &__search {
      display: flex;
      gap: 1rem;
      margin-top: 1rem;
    }

    @media only screen and (max-width: $bp-mobile) {
      justify-content: center;
    }
  }

  &__logo {
    object-fit: contain;
    max-height: 25rem;
    display: block;
    margin: 2rem auto;
    border-radius: 2%;
  }

  .empty {
    grid-column: 2 / -1;

    @media only screen and (max-width: $bp-mobile) {
      grid-column: auto;
    }
  }
}

.politicians {
  grid-column: center-start / center-end;

  display: grid;
  padding-bottom: 2rem;
  grid-template-columns: repeat(3, minmax($card-width, 32rem));
  gap: 3rem;

  @media only screen and (max-width: $bp-medium) {
    grid-template-columns: [center-start] repeat(2, minmax(20rem, 1fr)) [center-end];
  }

  @media only screen and (max-width: $bp-mobile) {
    grid-template-columns: [center-start] 1fr [center-end];
    gap: 2rem;
  }
}

.no-result {
  font-size: 2rem;
  grid-column: 1 / -1;

  @media only screen and (max-width: $bp-small) {
    line-height: 4rem;
  }
}

.no-politician {
  grid-column: 1 / -1;

  display: flex;
  flex-direction: column;
  gap: 3rem;
  align-items: center;
}

.visible-shit {
  visibility: visible;
}

.invisible-shit {
  visibility: hidden;
}

